--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "pm2": "2.10.1",
     "raven": "2.4.1",
     "redis": "2.8.0",
-    "rxjs": "5.5.6",
+    "rxjs": "6.0.0-alpha.3",
     "sequelize": "4.33.4",
     "socket.io": "2.0.4",
     "socket.io-redis": "5.2.0"
